rediseño del portafolio y cambios en algunas seciones

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
    <!--=============== FAVICON ===============-->
-   <!--<link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon" />-->
+   <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
 
    <!--=============== REMIXICONS ===============-->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css" />
@@ -70,15 +70,16 @@
                <div class="about__data grid">
                   <div class="about__info grid">
                      <h1 class="about__name">Zarquiz Ortega</h1>
-                     <h2 class="about__profession" id="profession"> </h2>
+                     <h2 class="about__profession" id="profession"></h2>
                      <p class="about__description">
-                        Recién egresado de la <b>Ingeniería en tecnologías de la
-                        información y comunicaciones</b> y <b>Desarollador web</b>, con conocimientos en
-                        diseño web con <b>HTML, CSS, PHP y JS </b>y en base de datos con <b>phpMyAdmin y MySQL</b>. Con mucha disposición por
+                        Hola 👋🏻<br>
+                        Soy recién egresado de la <b>Ingeniería en tecnologías de la
+                        información y comunicaciones</b> y <b>Desarollador Full Stack</b>, con conocimientos en
+                        diseño web como <b>HTML, CSS, PHP y JS </b>y en base de datos con <b>phpMyAdmin y MySQL</b>. Con muchas ganas de
                         seguir aprendiendo y trabajar en nuevos proyectos.
                      </p>
                   </div>
-                  <a href="contact.html" class="about__button button">📞 Contactame...</a>
+                  <a href="contact.html" class="about__button button">📞 Contactame</a>
                </div>
 
                <div class="about__skills">
@@ -91,7 +92,7 @@
                      <img src="assets/img/about-github.svg" alt="img HTML" class="about__skills-img">
                      <img src="assets/img/about-git.svg" alt="img HTML" class="about__skills-img">
                      <img src="assets/img/about-javascript.svg" alt="img HTML" class="about__skills-img">
-                     <img src="assets/img/about-react.svg" alt="img HTML" class="about__skills-img">
+                     <!--<img src="assets/img/about-react.svg" alt="img HTML" class="about__skills-img">-->
                      <img src="assets/img/about-php.svg" alt="img HTML" class="about__skills-img">
                      <img src="assets/img/about-phpmyadmin.svg" alt="img HTML" class="about__skills-img">
                      <img src="assets/img/about-mysql.svg" alt="img HTML" class="about__skills-img"> 
