--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
    <!--=============== FAVICON ===============-->
+   <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
 
    <!--=============== CSS ===============-->
    <link rel="stylesheet" href="assets/css/styles.css">
@@ -67,7 +68,7 @@
                <div class="home__data grid">
                   <h1 class="home__name">Zarquiz Ortega</h1>
 
-                  <h2 class="home__profession" id="profession"> </h2>
+                  <h2 class="home__profession" id="profession"></h2>
 
                   <div class="home__socila">
                      <a href="https://www.linkedin.com/in/luis-steven-zarquiz-ortega-chavez-186837284/" target="_blank"
@@ -93,69 +94,96 @@
 
          <div class="work__container container grid">
             <article class="word__card">
-               <a href="#" class="work__link">
+               <a href="https://github.com/Zarquiz-Ortega/tiendazace.git" target="_blank" class="work__link">
                   <img src="assets/img/work-1.png" alt="trabajo 1" class="work__img">
-                  <i class="ri-arrow-right-circle-line work__icon"></i>
+                  <i class="ri-github-fill work__icon"></i>
                </a>
 
                <h2 class="work__title">🏪 Tienda ZACE</h2>
                <span class="work__subtitle">Diseño de portal Ecommerse</span><br>
-               <span class="work__skills"> HTML php Bootstrap phpMyAdmin</span>
+               <div class="work__skills">
+                  <span class="work__skill"><i class="ri-html5-fill"></i>HTML</span>
+                  <span class="work__skill"><i class="ri-code-box-fill"></i>PHP</span>
+                  <span class="work__skill"><i class="ri-bootstrap-fill"></i>Bootstrap</span>
+                  <span class="work__skill"><i class="ri-database-2-fill"></i>phpMyAdmin</span>
+               </div>
+               
             </article>
 
             <article class="word__card">
-               <a href="#" class="work__link">
+               <a href="https://github.com/Zarquiz-Ortega/landingpagesicov.git" target="_blank" class="work__link">
                   <img src="assets/img/work-2.png" alt="trabajo 1" class="work__img">
-                  <i class="ri-arrow-right-circle-line work__icon"></i>
+                  <i class="ri-github-fill work__icon"></i>
                </a>
 
                <h2 class="work__title">📱 landing page SICOV</h2>
                <span class="work__subtitle">Diseño de página web</span> <br>
-               <span class="work__skills"> HTML php Bootstrap phpMyAdmin</span>
+               <div class="work__skills">
+                  <span class="work__skill"><i class="ri-html5-fill"></i>HTML</span>
+                  <span class="work__skill"><i class="ri-code-box-fill"></i>PHP</span>
+                  <span class="work__skill"><i class="ri-bootstrap-fill"></i>Bootstrap</span>
+                  <span class="work__skill"><i class="ri-database-2-fill"></i>phpMyAdmin</span>
+               </div>
             </article>
 
             <article class="word__card">
-               <a href="#" class="work__link">
+               <a href="https://github.com/Zarquiz-Ortega/crmsicov.git" target="_blank" class="work__link">
                   <img src="assets/img/work-3.png" alt="trabajo 1" class="work__img">
-                  <i class="ri-arrow-right-circle-line work__icon"></i>
+                  <i class="ri-github-fill work__icon"></i>
                </a>
 
                <h2 class="work__title">⚙️ CRM de ventas SICOV</h2>
                <span class="work__subtitle">Diseño de sistema CRM</span> <br>
-               <span class="work__skills"> HTML php Bootstrap phpMyAdmin</span>
+               <div class="work__skills">
+                  <span class="work__skill"><i class="ri-html5-fill"></i>HTML</span>
+                  <span class="work__skill"><i class="ri-code-box-fill"></i>PHP</span>
+                  <span class="work__skill"><i class="ri-bootstrap-fill"></i>Bootstrap</span>
+                  <span class="work__skill"><i class="ri-database-2-fill"></i>phpMyAdmin</span>
+               </div>
             </article>
 
             <article class="word__card">
-               <a href="#" class="work__link">
+               <a href="https://github.com/Zarquiz-Ortega/blogmotos.git" target="_blank" class="work__link">
                   <img src="assets/img/work-4.png" alt="trabajo 1" class="work__img">
-                  <i class="ri-arrow-right-circle-line work__icon"></i>
+                  <i class="ri-github-fill work__icon"></i>
                </a>
 
                <h2 class="work__title"> 🏍️ Blog de motos</h2>
                <span class="work__subtitle">Diseño de blog web</span> <br>
-               <span class="work__skills"> HTML CSS</span>
+               <div class="work__skills">
+                  <span class="work__skill"><i class="ri-html5-fill"></i>HTML</span>
+                  <span class="work__skill"><i class="ri-css3-fill"></i>CSS</span>
+               </div>
             </article>
 
             <article class="word__card">
-               <a href="#" class="work__link">
+               <a href="#" target="_blank" class="work__link">
                   <img src="assets/img/work-4.png" alt="trabajo 1" class="work__img">
-                  <i class="ri-arrow-right-circle-line work__icon"></i>
+                  <i class="ri-github-fill work__icon"></i>
                </a>
 
                <h2 class="work__title">🏪 Ecommers de JS</h2>
                <span class="work__subtitle">Diseño de Ecommers</span> <br>
-               <span class="work__skills"> HTML CSS JS</span>
+               <div class="work__skills">
+                  <span class="work__skill"><i class="ri-html5-fill"></i>HTML</span>
+                  <span class="work__skill"><i class="ri-css3-fill"></i>CSS</span>
+                  <span class="work__skill"><i class="ri-javascript-fill"></i>Java Script</span>
+
+               </div>
             </article>
 
             <article class="word__card">
-               <a href="#" class="work__link">
+               <a href="https://github.com/Zarquiz-Ortega/elementosbem.git" target="_blank" class="work__link">
                   <img src="assets/img/work-6.png" alt="trabajo 1" class="work__img">
-                  <i class="ri-arrow-right-circle-line work__icon"></i>
+                  <i class="ri-github-fill work__icon"></i>
                </a>
 
                <h2 class="work__title">📱 Elelementos BEM</h2>
                <span class="work__subtitle">Uso de la metodologia BEM</span> <br>
-               <span class="work__skills"> HTML CSS</span>
+               <div class="work__skills">
+                  <span class="work__skill"><i class="ri-html5-fill"></i>HTML</span>
+                  <span class="work__skill"><i class="ri-css3-fill"></i>CSS</span>
+               </div>
             </article>
          </div>
       </section>
