secion de reseñas y responsividad

--- a/about.html
+++ b/about.html
@@ -74,9 +74,9 @@
                      <p class="about__description">
                         Hola 👋🏻<br>
                         Soy recién egresado de la <b>Ingeniería en tecnologías de la
-                        información y comunicaciones</b> y <b>Desarollador Full Stack</b>, con conocimientos en
-                        diseño web como <b>HTML, CSS, PHP y JS </b>y en base de datos con <b>phpMyAdmin y MySQL</b>. Con muchas ganas de
-                        seguir aprendiendo y trabajar en nuevos proyectos.
+                        información y comunicaciones</b> y <b>Desarrollador Full Stack</b>, con conocimientos en
+                        diseño web como <b>HTML, CSS, PHP y JS </b>y en base de datos con <b>phpMyAdmin y MySQL.</b>
+                        Estoy emocionado por seguir aprendiendo y embarcarme en nuevos proyectos. ¡Vamos a crear algo increíble juntos!"
                      </p>
                   </div>
                   <a href="contact.html" class="about__button button">📞 Contactame</a>
