--- a/contact.html
+++ b/contact.html
@@ -45,8 +45,6 @@
          </div>
 
          <div class="nav__actions">
-            <!-- Thema del boton-->
-
             <!-- desplegable boton -->
             <div class="nav__toggle" id="nav-toggle">
                <i class="ri-apps-2-line"></i>
@@ -58,7 +56,7 @@
    <main class="main">
       <!--==================== CONTACTO ====================-->
       <section class="contact section">
-         <h2 class="section__title">Aqui puedes <br> Dejarme un mensaje</h2>
+         <h2 class="section__title">Aqui puedes <br> Dejarme un mensaje <br> juntos crearemos algo increíble.</h2>
 
          <div class="contact__page container grid">
             <form action="" class="contact__form grid" id="contact-form">
