--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
    <!--=============== REMIXICONS ===============-->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css">
 
+   <!--=============== SWIPER CSS  ===============-->
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
    <title>Inicio | &lt;Z/O&gt;</title>
 
 </head>
@@ -107,7 +110,7 @@
                   <span class="work__skill"><i class="ri-bootstrap-fill"></i>Bootstrap</span>
                   <span class="work__skill"><i class="ri-database-2-fill"></i>phpMyAdmin</span>
                </div>
-               
+
             </article>
 
             <article class="word__card">
@@ -188,10 +191,110 @@
          </div>
       </section>
 
+      <!--==================== RESEÑAS ====================-->
+      <section class="review section">
+         <h2 class="section__title">Reseñas</h2>
+
+         <div class="review__container container">
+            <!-- Slider main container -->
+            <div class="swiper">
+               <!-- Additional required wrapper -->
+               <div class="swiper-wrapper">
+                  <!-- Slides -->
+                  <div class="swiper-slide">
+                     <div class="review__content">
+                        <div class="review__head">
+                           <div class="review__img">
+                              <img src="assets/img/home-perfil.png" alt="imagen dela reseña">
+                           </div>
+                           <h2 class="review__name">Nombre de la persona</h2>
+                           <h3 class="review__profeccion">Reseña 1</h3>
+                        </div>
+                        <div class="review__body">
+                           <p class="review__description">
+                              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                              Nam animi, eligendi non minima pariatur laborum expedita,
+                              ex inventore cumque libero labore, nemo illo! Aspernatur
+                              sit non voluptatem, eaque tempore quasi!
+                           </p>
+                           <div class="review__social">
+                              <a href="https://mx.linkedin.com" target="_blank" class="review__social-link">
+                                 <i class="ri-linkedin-box-fill"></i>
+                              </a>
+                              <a href="https://github.com" target="_blank" class="review__social-link">
+                                 <i class="ri-github-fill"></i>
+                              </a>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="swiper-slide">
+                     <div class="review__content">
+                        <div class="review__head">
+                           <div class="review__img">
+                              <img src="assets/img/home-perfil.png" alt="imagen dela reseña">
+                           </div>
+                           <h2 class="review__name">Nombre de la persona</h2>
+                           <h3 class="review__profeccion">Reseña 2</h3>
+                        </div>
+                        <div class="review__body">
+                           <p class="review__description">
+                              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                              Nam animi, eligendi non minima pariatur laborum expedita,
+                              ex inventore cumque libero labore, nemo illo! Aspernatur
+                              sit non voluptatem, eaque tempore quasi!
+                           </p>
+                           <div class="review__social">
+                              <a href="https://mx.linkedin.com" target="_blank" class="review__social-link">
+                                 <i class="ri-linkedin-box-fill"></i>
+                              </a>
+                              <a href="https://github.com" target="_blank" class="review__social-link">
+                                 <i class="ri-github-fill"></i>
+                              </a>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="swiper-slide">
+                     <div class="review__content">
+                        <div class="review__head">
+                           <div class="review__img">
+                              <img src="assets/img/home-perfil.png" alt="imagen dela reseña">
+                           </div>
+                           <h2 class="review__name">Nombre de la persona</h2>
+                           <h3 class="review__profeccion">Reseña 3</h3>
+                        </div>
+                        <div class="review__body">
+                           <p class="review__description">
+                              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                              Nam animi, eligendi non minima pariatur laborum expedita,
+                              ex inventore cumque libero labore, nemo illo! Aspernatur
+                              sit non voluptatem, eaque tempore quasi!
+                           </p>
+                           <div class="review__social">
+                              <a href="https://mx.linkedin.com" target="_blank" class="review__social-link">
+                                 <i class="ri-linkedin-box-fill"></i>
+                              </a>
+                              <a href="https://github.com" target="_blank" class="review__social-link">
+                                 <i class="ri-github-fill"></i>
+                              </a>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <!-- If we need pagination -->
+               <div class="swiper-pagination"></div>
+
+            </div>
+
+         </div>
+      </section>
+
       <!--==================== CONTACTO ====================-->
       <section class="contact section">
          <div class="contact__container container grid">
-            <h2 class="section__title">Aqui puedes <br> Dejarme un mensaje</h2>
+            <h2 class="section__title">Déjame un mensaje y <br> juntos crearemos algo increíble. <br> <span>¡Estoy emocionado por conocerte!</span></h2>
 
             <a href="contact.html" class="contact__button button">📞 Contactame</a>
          </div>
@@ -238,6 +341,9 @@
 
    <!--============ TYPED.JS =============-->
    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+
+   <!--=============== SWIPER CSS  ===============-->
+   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
    <!--=============== JS ===============-->
    <script src="assets/js/main.js"></script>
