--- a/about.html
+++ b/about.html
@@ -82,20 +82,29 @@
                   <a href="contact.html" class="about__button button">📞 Contactame</a>
                </div>
 
-               <div class="about__skills">
-                  <h3 class="about__skills-title">Mis Skills </h3>
+               <div class="about__aptitudes" >
+                  <div class="about__skills">
+                     <h3 class="about__title">Mis Skills </h3>
+   
+                     <div class="about__skills-content grid">
+                        <img src="assets/img/about-html.svg" alt="img HTML" class="about__skills-img">
+                        <img src="assets/img/about-css.svg" alt="img HTML" class="about__skills-img">
+                        <img src="assets/img/about-bootstrap-.svg" alt="img HTML" class="about__skills-img"> 
+                        <img src="assets/img/about-github.svg" alt="img HTML" class="about__skills-img">
+                        <img src="assets/img/about-git.svg" alt="img HTML" class="about__skills-img">
+                        <img src="assets/img/about-javascript.svg" alt="img HTML" class="about__skills-img">
+                        <img src="assets/img/about-react.svg" alt="img HTML" class="about__skills-img">
+                        <img src="assets/img/about-php.svg" alt="img HTML" class="about__skills-img">
+                        <img src="assets/img/about-phpmyadmin.svg" alt="img HTML" class="about__skills-img">
+                        <img src="assets/img/about-mysql.svg" alt="img HTML" class="about__skills-img"> 
+                     </div>
+                  </div>
 
-                  <div class="about__skills-content grid">
-                     <img src="assets/img/about-html.svg" alt="img HTML" class="about__skills-img">
-                     <img src="assets/img/about-css.svg" alt="img HTML" class="about__skills-img">
-                     <img src="assets/img/about-bootstrap-.svg" alt="img HTML" class="about__skills-img"> 
-                     <img src="assets/img/about-github.svg" alt="img HTML" class="about__skills-img">
-                     <img src="assets/img/about-git.svg" alt="img HTML" class="about__skills-img">
-                     <img src="assets/img/about-javascript.svg" alt="img HTML" class="about__skills-img">
-                     <!--<img src="assets/img/about-react.svg" alt="img HTML" class="about__skills-img">-->
-                     <img src="assets/img/about-php.svg" alt="img HTML" class="about__skills-img">
-                     <img src="assets/img/about-phpmyadmin.svg" alt="img HTML" class="about__skills-img">
-                     <img src="assets/img/about-mysql.svg" alt="img HTML" class="about__skills-img"> 
+                  <div class="about__education" >
+                     <h3 class="about__title">Mis Estudios </h3>
+                     <div class="about__education-content">
+                        <img class="about__educatin-certificado" src="assets/img/certificate.png" alt="Certificado de fundamentos">
+                     </div>
                   </div>
                </div>
             </div>
