configuracion de links del portafolio

--- a/index.html
+++ b/index.html
@@ -94,98 +94,78 @@
       <!--==================== PORTAFOLIO ====================-->
       <section class="work section">
          <h2 class="section__title">👨🏻‍💻 Mis trabajos 👨🏻‍💻</h2>
+         <p class="work__titel-description">Aqui estan mis trabajos mas recientes si gustas vermas pudes ir a la sección de <b>Mi portafoflio</b></p>
 
          <div class="work__container container grid">
             <article class="word__card">
-               <a href="https://github.com/Zarquiz-Ortega/tiendazace.git" target="_blank" class="work__link">
-                  <img src="assets/img/work-1.png" alt="trabajo 1" class="work__img">
-                  <i class="ri-github-fill work__icon"></i>
-               </a>
-
-               <h2 class="work__title">🏪 Tienda ZACE</h2>
-               <span class="work__subtitle">Diseño de portal Ecommerse</span><br>
-               <div class="work__skills">
-                  <span class="work__skill"><i class="ri-html5-fill"></i>HTML</span>
-                  <span class="work__skill"><i class="ri-code-box-fill"></i>PHP</span>
-                  <span class="work__skill"><i class="ri-bootstrap-fill"></i>Bootstrap</span>
-                  <span class="work__skill"><i class="ri-database-2-fill"></i>phpMyAdmin</span>
-               </div>
-
-            </article>
-
-            <article class="word__card">
-               <a href="https://github.com/Zarquiz-Ortega/landingpagesicov.git" target="_blank" class="work__link">
-                  <img src="assets/img/work-2.png" alt="trabajo 1" class="work__img">
-                  <i class="ri-github-fill work__icon"></i>
-               </a>
-
-               <h2 class="work__title">📱 landing page SICOV</h2>
-               <span class="work__subtitle">Diseño de página web</span> <br>
-               <div class="work__skills">
-                  <span class="work__skill"><i class="ri-html5-fill"></i>HTML</span>
-                  <span class="work__skill"><i class="ri-code-box-fill"></i>PHP</span>
-                  <span class="work__skill"><i class="ri-bootstrap-fill"></i>Bootstrap</span>
-                  <span class="work__skill"><i class="ri-database-2-fill"></i>phpMyAdmin</span>
-               </div>
-            </article>
-
-            <article class="word__card">
-               <a href="https://github.com/Zarquiz-Ortega/crmsicov.git" target="_blank" class="work__link">
-                  <img src="assets/img/work-3.png" alt="trabajo 1" class="work__img">
-                  <i class="ri-github-fill work__icon"></i>
-               </a>
-
-               <h2 class="work__title">⚙️ CRM de ventas SICOV</h2>
-               <span class="work__subtitle">Diseño de sistema CRM</span> <br>
-               <div class="work__skills">
-                  <span class="work__skill"><i class="ri-html5-fill"></i>HTML</span>
-                  <span class="work__skill"><i class="ri-code-box-fill"></i>PHP</span>
-                  <span class="work__skill"><i class="ri-bootstrap-fill"></i>Bootstrap</span>
-                  <span class="work__skill"><i class="ri-database-2-fill"></i>phpMyAdmin</span>
-               </div>
-            </article>
-
-            <article class="word__card">
-               <a href="https://github.com/Zarquiz-Ortega/blogmotos.git" target="_blank" class="work__link">
+               <div class="work__img-hover">
                   <img src="assets/img/work-4.png" alt="trabajo 1" class="work__img">
-                  <i class="ri-github-fill work__icon"></i>
-               </a>
+                  <div class="work__icon">
+                     <a class="work__icon-item" href="https://github.com/Zarquiz-Ortega/galletadelafortuna.git" target="_blank" rel="Github project"><i class="ri-github-fill "></i></a>
+                     <a class="work__icon-item" href="https://galletadelafortunalszoch.netlify.app" target="_blank" rel="Github project"><i class="ri-edge-fill"></i></a>
+                  </div>
+               </div>
 
-               <h2 class="work__title"> 🏍️ Blog de motos</h2>
-               <span class="work__subtitle">Diseño de blog web</span> <br>
+               <h2 class="work__title">🍪 Galleta de la fortuna</h2>
+               <span class="work__subtitle">Diseño y logica</span> <br>
                <div class="work__skills">
                   <span class="work__skill"><i class="ri-html5-fill"></i>HTML</span>
                   <span class="work__skill"><i class="ri-css3-fill"></i>CSS</span>
+                  <span class="work__skill"><i class="ri-reactjs-line"></i>React</span>
                </div>
             </article>
 
             <article class="word__card">
-               <a href="#" target="_blank" class="work__link">
-                  <img src="assets/img/work-4.png" alt="trabajo 1" class="work__img">
-                  <i class="ri-github-fill work__icon"></i>
-               </a>
+               <div class="work__img-hover">
+                  <img src="assets/img/work-5.png" alt="trabajo 1" class="work__img">
+                  <div class="work__icon">
+                     <a class="work__icon-item" href="https://github.com/Zarquiz-Ortega/weatherapp.git" target="_blank" rel="Github project"><i class="ri-github-fill"></i></a>
+                     <a class="work__icon-item" href="https://weaterapplszoch.netlify.app" target="_blank" rel="Github project"><i class="ri-edge-fill"></i></a>
+                  </div>
+               </div>
 
-               <h2 class="work__title">🏪 Ecommers de JS</h2>
-               <span class="work__subtitle">Diseño de Ecommers</span> <br>
+               <h2 class="work__title">⛅ Weather app</h2>
+               <span class="work__subtitle">Diseño y logica</span> <br>
                <div class="work__skills">
                   <span class="work__skill"><i class="ri-html5-fill"></i>HTML</span>
                   <span class="work__skill"><i class="ri-css3-fill"></i>CSS</span>
-                  <span class="work__skill"><i class="ri-javascript-fill"></i>Java Script</span>
-
+                  <span class="work__skill"><i class="ri-reactjs-line"></i>React</span>
                </div>
             </article>
 
             <article class="word__card">
-               <a href="https://github.com/Zarquiz-Ortega/elementosbem.git" target="_blank" class="work__link">
+               <div class="work__img-hover">
                   <img src="assets/img/work-6.png" alt="trabajo 1" class="work__img">
-                  <i class="ri-github-fill work__icon"></i>
-               </a>
+                  <div class="work__icon">
+                     <a class="work__icon-item" href="https://github.com/Zarquiz-Ortega/rickandmorty.git" target="_blank" rel="Github project"><i class="ri-github-fill"></i></a>
+                     <a class="work__icon-item" href="https://lszochrickandmorty.netlify.app" target="_blank" rel="Github project"><i class="ri-edge-fill"></i></a>
+                  </div>
+               </div>
 
-               <h2 class="work__title">📱 Elelementos BEM</h2>
-               <span class="work__subtitle">Uso de la metodologia BEM</span> <br>
+               <h2 class="work__title">👽 Rick and Morty</h2>
+               <span class="work__subtitle">Diseño y logica</span> <br>
                <div class="work__skills">
                   <span class="work__skill"><i class="ri-html5-fill"></i>HTML</span>
                   <span class="work__skill"><i class="ri-css3-fill"></i>CSS</span>
+                  <span class="work__skill"><i class="ri-reactjs-line"></i>React</span>
+               </div>
+            </article>
+
+            <article class="word__card">
+               <div class="work__img-hover">
+                  <img src="assets/img/work-7.png" alt="trabajo 1" class="work__img">
+                  <div class="work__icon">
+                     <a class="work__icon-item" href="https://github.com/Zarquiz-Ortega/crudusers.git" target="_blank" rel="Github project"><i class="ri-github-fill"></i></a>
+                     <a class="work__icon-item" href="https://cruduserslszoch.netlify.app" target="_blank" rel="Github project"><i class="ri-edge-fill"></i></a>
+                  </div>
+               </div>
+
+               <h2 class="work__title">🛠️ CRUD de usuarios</h2>
+               <span class="work__subtitle">Diseño y logica</span> <br>
+               <div class="work__skills">
+                  <span class="work__skill"><i class="ri-html5-fill"></i>HTML</span>
+                  <span class="work__skill"><i class="ri-css3-fill"></i>CSS</span>
+                  <span class="work__skill"><i class="ri-reactjs-line"></i>React</span>
                </div>
             </article>
          </div>
