--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
                   </div>
                </div>
-               <a href="assets/pdf/CV.pdf" download="" class="home__button button">Descargar mi CV <i
+               <a href="assets/pdf/" download="" class="home__button button">Descargar mi CV <i
                      class="ri-arrow-down-line"></i></a>
             </div>
          </div>
@@ -99,14 +99,14 @@
          <div class="work__container container grid">
             <article class="word__card">
                <div class="work__img-hover">
-                  <img src="assets/img/work-4.png" alt="trabajo 1" class="work__img">
+                  <img src="assets/img/work-9.png" alt="trabajo 1" class="work__img">
                   <div class="work__icon">
-                     <a class="work__icon-item" href="https://github.com/Zarquiz-Ortega/galletadelafortuna.git" target="_blank" rel="Github project"><i class="ri-github-fill "></i></a>
-                     <a class="work__icon-item" href="https://galletadelafortunalszoch.netlify.app" target="_blank" rel="Github project"><i class="ri-edge-fill"></i></a>
+                     <a class="work__icon-item" href="https://github.com/Zarquiz-Ortega/ecommerslszoch.git" target="_blank" rel="Github project"><i class="ri-github-fill "></i></a>
+                     <a class="work__icon-item" href="https://ecommerselszoch.netlify.app" target="_blank" rel="Github project"><i class="ri-edge-fill"></i></a>
                   </div>
                </div>
 
-               <h2 class="work__title">🍪 Galleta de la fortuna</h2>
+               <h2 class="work__title">🛒 Ecommerce</h2>
                <span class="work__subtitle">Diseño y logica</span> <br>
                <div class="work__skills">
                   <span class="work__skill"><i class="ri-html5-fill"></i>HTML</span>
@@ -117,14 +117,14 @@
 
             <article class="word__card">
                <div class="work__img-hover">
-                  <img src="assets/img/work-5.png" alt="trabajo 1" class="work__img">
+                  <img src="assets/img/work-8.png" alt="trabajo 1" class="work__img">
                   <div class="work__icon">
-                     <a class="work__icon-item" href="https://github.com/Zarquiz-Ortega/weatherapp.git" target="_blank" rel="Github project"><i class="ri-github-fill"></i></a>
-                     <a class="work__icon-item" href="https://weaterapplszoch.netlify.app" target="_blank" rel="Github project"><i class="ri-edge-fill"></i></a>
+                     <a class="work__icon-item" href="https://github.com/Zarquiz-Ortega/pekedexlszoch.git" target="_blank" rel="Github project"><i class="ri-github-fill"></i></a>
+                     <a class="work__icon-item" href="https://pokedexlszoch.netlify.app" target="_blank" rel="Github project"><i class="ri-edge-fill"></i></a>
                   </div>
                </div>
 
-               <h2 class="work__title">⛅ Weather app</h2>
+               <h2 class="work__title">🦖 Pokedex</h2>
                <span class="work__subtitle">Diseño y logica</span> <br>
                <div class="work__skills">
                   <span class="work__skill"><i class="ri-html5-fill"></i>HTML</span>
@@ -265,9 +265,7 @@
                </div>
                <!-- If we need pagination -->
                <div class="swiper-pagination"></div>
-
             </div>
-
          </div>
       </section>
 
